--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
+title:               KM-A Joblist Report
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://lanyon.getpoole.com
-baseurl:             '/lanyon'
+baseurl:             '/km-a-jlr'
 paginate:            5
 
 # About/contact
